<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_your_password">Forgot your Password?</string>
</resources>
