<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="20dp"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Here you can replace it with your logo or brand name -->
            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_directions_bike_black_24dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:textColorHint="#ffffff"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:layout_marginTop="70dp"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:drawablePadding="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColorHint="#ffffff"
                android:hint="@string/password"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                />


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/remember_me"
                android:textColor="#fff"
                android:padding="8dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textStyle="normal"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textColor="#f16f7d"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginTop="24dp"
                android:focusable="true" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_signup"
                android:text="@string/sign_up"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textStyle="normal"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginTop="16dp"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_your_password"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#fff"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginBottom="16dp"
                android:focusable="true" />





        </LinearLayout>
    </ScrollView>

</LinearLayout>